--- a/ReactJS/src/containers/System/SystemLayout.scss
+++ b/ReactJS/src/containers/System/SystemLayout.scss
@@ -4,7 +4,10 @@
     flex-direction: column;
     overflow: hidden;
     font-family: -apple-system, BlinkMacSystemFont, "SF Pro Text", "Helvetica Neue", Arial, sans-serif;
-    height: 100vh;
+    position: fixed;
+    inset: 0;
+    width: 100%;
+    height: 100%;
     height: 100dvh;
 
     .sub-header {
@@ -549,7 +552,7 @@
 
             .main-content {
                 padding: 20px;
-                padding-bottom: 100px;
+                padding-bottom: calc(env(safe-area-inset-bottom, 0px) + 30px) !important;
             }
         }
     }
